Fix some responsive issues on mobile.

--- a/styles/_code.scss
+++ b/styles/_code.scss
@@ -24,9 +24,8 @@
   margin: 0 auto;
   margin-bottom: 5%;
   max-width: 90%;
-  @include breakpoint($medium) {
-    // margin: 0 auto;
-    width: 85%;
+  @include breakpoint($small) {
+    max-width: 80%;
   }
 }
 
@@ -66,6 +65,10 @@ hr {
     height: 2px;
     margin: 0 10% 5%;
   }
+}
+
+.website {
+  padding-bottom: 50px;
 }
 
 .hr-first {
